--- a/russian-travel-main/index.html
+++ b/russian-travel-main/index.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <section class="lead">
-                <h1 class="lead__title">Путешествия <br>по России</h1>
+                <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках <br>новостей, а здесь.</p>
                 <div class="main-image">
                     <img src="images/lead/__image.png" class="lead__image" alt="карта">
