первая попытка точно последние правки

--- a/russian-travel-main/index.html
+++ b/russian-travel-main/index.html
@@ -20,7 +20,7 @@
         <main>
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
-                <p class="lead__subtitle">Настоящая страна не в выпусках <br>новостей, а здесь.</p>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <div class="main-image">
                     <img src="images/lead/__image.png" class="lead__image" alt="карта">
                     <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
@@ -197,7 +197,7 @@
             </div>
 
             <section class="cover">
-                <h2 class="cover__title">До Байкала <br>«на собаках»</h2>
+                <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
                     электричках.</p>
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay"></a>
