--- a/russian-travel-main/index.html
+++ b/russian-travel-main/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="page">
         <header class="header">
-            <img src="images/header/__logo.png" class="header__logo" alt="логотип хедер">
+            <img src="images/header/__logo.svg" class="header__logo" alt="логотип хедер">
             <div>
-                <a href="#" class="header__lang-link header__lang-link_underline">Ru</a>
+                <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
                 <a href="#" class="header__lang-link">En</a>
             </div>
         </header>
@@ -21,10 +21,8 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <div class="main-image">
-                    <img src="images/lead/__image.png" class="lead__image" alt="карта">
-                    <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
-                </div>
+                <img src="images/lead/__image.png" class="lead__image" alt="карта">
+                <p class="lead__caption">ваша полка - верхняя</p>
             </section>
 
             <section class="intro">
@@ -43,15 +41,15 @@
                     километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
                     отпуска.</p>
                 <ul class="intro__list">
-                    <li>Часовых поясов 11</li>
-                    <li>Объектов природного наследия ЮНЕСКО 12</li>
-                    <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                    <li>Природных заповедников 105</li>
-                    <li>Аэропортов 241</li>
+                    <li><span class="intro__list_bold">Часовых поясов</span> 11</li>
+                    <li><span class="intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                    <li><span class="intro__list_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                    <li><span class="intro__list_bold">Природных заповедников</span> 105</li>
+                    <li><span class="intro__list_bold">Аэропортов</span> 241</li>
                 </ul>
             </section>
 
-            <section class="photo-grid inner">
+            <section class="photo-grid">
                 <img src="images/photo-grid/photo-grid-train.jpg" class="photo-grid__item" alt="поезд">
                 <img src="images/photo-grid/photo-grid-atharva-tulsi.jpg" class="photo-grid__item" alt="тулси">
                 <img src="images/photo-grid/photo-grid-tuman.jpg" class="photo-grid__item" alt="туман">
@@ -66,12 +64,12 @@
                 <img src="images/photo-grid/photo-grid-ergaki.jpg" class="photo-grid__item" alt="эргаки">
             </section>
 
-            <div class="places">
+            <section class="places">
 
-                <section class="place">
+                <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
                     </div>
                     <img src="images/place-kosa.jpg" class="place__image" alt="куршская коса">
@@ -93,12 +91,12 @@
                             природы и
                             запах стального, прохладного моря.</p>
                     </div>
-                </section>
+                </div>
 
-                <section class="place">
+                <div class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                             class="place__link">National
                             Geographic</a>
@@ -122,12 +120,12 @@
                             накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
                             в Мурманск.</p>
                     </div>
-                </section>
+                </div>
 
-                <section class="place">
+                <div class="place">
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link">YouTube</a>
                     </div>
                     <img src="images/place-altai.jpg" class="place__image" alt="алтай">
@@ -149,12 +147,12 @@
                             равнинах
                             пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                     </div>
-                </section>
+                </div>
 
-                <section class="place">
+                <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
                     </div>
                     <img src="images/place-winter-baikal.jpg" class="place__image" alt="зимний байкал">
@@ -172,12 +170,12 @@
                             фестивале
                             «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                     </div>
-                </section>
+                </div>
 
-                <section class="place">
+                <div class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="http://vodlozero.ru/" class="place__link">http://vodlozero.ru/</a>
                     </div>
                     <img src="images/place-karelia.jpg" class="place__image" alt="карелия">
@@ -192,27 +190,32 @@
                         Грозный.
                         В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-                </section>
+                </div>
 
-            </div>
-
-            <section class="cover">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-                    электричках.</p>
-                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay"></a>
-                <img src="images/cover-trains.jpg" class="cover__background" alt="до байкала на собаках">
             </section>
 
-            <footer class="footer">
-                <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-                <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-                <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-                <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-                <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
-                <p class="footer__copyright">© 2023. Дмитрий Лемешевский</p>
-            </footer>
+            <section class="cover">
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+                        на
+                        электричках.</p>
+                </a>
+
+                <!-- <img src="images/cover-trains.jpg" class="cover__background" alt="до байкала на собаках"> -->
+            </section>
         </main>
+
+        <footer class="footer">
+            <nav class="footer__menu">
+                <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+                <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+                <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+                <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+                <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+            </nav>
+            <p class="footer__copyright">&copy; 2023. Дмитрий Лемешевский</p>
+        </footer>
     </div>
 </body>
 
