--- a/russian-travel-main/index.html
+++ b/russian-travel-main/index.html
@@ -202,17 +202,18 @@
                         электричках.</p>
                 </a>
 
-                <!-- <img src="images/cover-trains.jpg" class="cover__background" alt="до байкала на собаках"> -->
             </section>
         </main>
 
         <footer class="footer">
             <nav class="footer__menu">
-                <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-                <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-                <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-                <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-                <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+                <ul class="footer__ul">
+                    <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+                    <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+                    <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+                    <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+                    <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+                </ul>
             </nav>
             <p class="footer__copyright">&copy; 2023. Дмитрий Лемешевский</p>
         </footer>
