--- a/russian-travel-main/index.html
+++ b/russian-travel-main/index.html
@@ -41,11 +41,11 @@
                     километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
                     отпуска.</p>
                 <ul class="intro__list">
-                    <li><span class="intro__list intro__list_bold">Часовых поясов</span> 11</li>
-                    <li><span class="intro__list intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
-                    <li><span class="intro__list intro__list_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-                    <li><span class="intro__list intro__list_bold">Природных заповедников</span> 105</li>
-                    <li><span class="intro__list intro__list_bold">Аэропортов</span> 241</li>
+                    <li><span class="weight-bold">Часовых поясов</span> 11</li>
+                    <li><span class="weight-bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                    <li><span class="weight-bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                    <li><span class="weight-bold">Природных заповедников</span> 105</li>
+                    <li><span class="weight-bold">Аэропортов</span> 241</li>
                 </ul>
             </section>
 
@@ -171,7 +171,6 @@
                             «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                     </div>
                 </div>
-
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
@@ -191,7 +190,6 @@
                         В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                 </div>
-
             </section>
 
             <section class="cover">
@@ -201,7 +199,6 @@
                         на
                         электричках.</p>
                 </a>
-
             </section>
         </main>
 
